--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
 	"license": "MIT",
 	"bin": {
 		"ncrud": "./lib/index.js"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.14",
+		"typescript": "^4.1.3"
 	}
 }
