--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 	"bin": {
 		"ncrud": "./lib/index.js"
 	},
+	"scripts": {
+		"build": "tsc"
+	},
 	"devDependencies": {
 		"@types/node": "^14.14.14",
 		"typescript": "^4.1.3"
