--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
 		"build": "tsc"
 	},
 	"devDependencies": {
+		"@types/figlet": "^1.2.1",
 		"@types/node": "^14.14.14",
 		"typescript": "^4.1.3"
+	},
+	"dependencies": {
+		"chalk": "^4.1.0",
+		"commander": "^6.2.1",
+		"figlet": "^1.5.0"
 	}
 }
