--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 	"devDependencies": {
 		"@types/figlet": "^1.2.1",
 		"@types/node": "^14.14.14",
+		"@types/pluralize": "0.0.29",
 		"typescript": "^4.1.3"
 	},
 	"dependencies": {
 		"chalk": "^4.1.0",
 		"commander": "^6.2.1",
-		"figlet": "^1.5.0"
+		"figlet": "^1.5.0",
+		"pluralize": "^8.0.0"
 	}
 }
