--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@types/figlet": "^1.2.1",
+		"@types/inquirer": "^7.3.1",
 		"@types/node": "^14.14.14",
 		"@types/pluralize": "0.0.29",
 		"typescript": "^4.1.3"
@@ -21,6 +22,7 @@
 		"chalk": "^4.1.0",
 		"commander": "^6.2.1",
 		"figlet": "^1.5.0",
+		"inquirer": "^7.3.3",
 		"pluralize": "^8.0.0"
 	}
 }
