Update package name to ncrud

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "node-crud-cli",
+	"name": "ncrud",
 	"version": "0.0.1",
 	"description": "Make CRUD files and stop wasting time doing same things",
 	"main": "lib/index.js",
